<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:text="@string/sendMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPostContent"
        tools:text="@string/sendMsg" />

    <EditText
        android:id="@+id/editTextAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/textAction"
        android:text="LIKE"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAction" />

    <EditText
        android:id="@+id/editTextPostAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/postAuthor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName" />

    <EditText
        android:id="@+id/editTextPostContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginElements"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/postContent"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPostAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>